Complete Rebuild: New BLUE-MD bot with 59 commands and strict session validation

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
-# BLUE-MD Environment Variables
-# Copy this file to .env and fill in your values
+# ========================================
+# BLUE-MD Bot Configuration
+# ========================================
 
-# OpenAI API Key for AI Chatbot
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Session ID (optional - generated automatically)
+# Session ID (REQUIRED)
+# Get this from pairing your WhatsApp account
 SESSION_ID=
 
-# Additional API Keys (if needed)
+# Database Configuration (REQUIRED)
+# MongoDB connection string
+MONGO_URI=mongodb://localhost:27017/bluemd
+
+# Bot Images (OPTIONAL)
+# URL for images used in menu, mods list, etc.
+BLUE_IMAGE=https://i.imgur.com/example.jpg
+
+# API Keys (OPTIONAL)
+# Add any API keys for external services here
+# OPENAI_API_KEY=
 # WEATHER_API_KEY=
-# NEWS_API_KEY=
