--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,17 @@
 node_modules/
 package-lock.json
 yarn.lock
-
-# Session files
-session/
-*.session
-
-# Database
-database/
+pnpm-lock.yaml
 
 # Environment variables
 .env
+
+# Session files
+session/
+
+# Database files
+*.db
+*.sqlite
 
 # Logs
 *.log
