--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,25 @@
 # BLUE-MD Bot Configuration
 # ========================================
 
-# Session ID (REQUIRED)
-# Get this from pairing your WhatsApp account
-SESSION_ID=
+# Session folder (REQUIRED)
+SESSION_ID=./session
 
-# Database Configuration (REQUIRED)
-# MongoDB connection string
-MONGO_URI=mongodb://localhost:27017/bluemd
+# Bot Image
+BLUE_IMAGE=https://d.uguu.se/HpAPramA.jpg
+# Command prefix
+PREFIX=.
 
-# Bot Images (OPTIONAL)
-# URL for images used in menu, mods list, etc.
-BLUE_IMAGE=https://i.imgur.com/example.jpg
+# Owners
+OWNERS=27675859928
 
-# API Keys (OPTIONAL)
-# Add any API keys for external services here
-# OPENAI_API_KEY=
-# WEATHER_API_KEY=
+# Mods / Guards
+MODS=27744332007,27675859928,27642735109,27729302932,191822534049927
+
+# Bot behavior
+AUTO_READ=true
+AUTO_REACT=true
+AUTO_TYPING=false
+
+# Timezone & logging
+TIMEZONE=Africa/Lagos
+LOG_LEVEL=info
